Bug 1015790 - Remove PropDesc::descObj_. (r=jorendorff)