js/src/vm/Debugger.cpp
@@ -5328,7 +5328,6 @@ DebuggerObject_defineProperty(JSContext *cx, unsigned argc, Value *vp)
     Rooted<PropDesc> desc(cx);
     if (!desc.initialize(cx, args[1], false))
         return false;
-    desc.clearDescriptorObject();
 
     if (!dbg->unwrapPropDescInto(cx, obj, desc, &desc))
         return false;
@@ -5339,8 +5338,6 @@ DebuggerObject_defineProperty(JSContext *cx, unsigned argc, Value *vp)
         Maybe<AutoCompartment> ac;
         ac.construct(cx, obj);
         if (!cx->compartment()->wrap(cx, &desc))
-            return false;
-        if (!desc.makeObject(cx))
             return false;
 
         ErrorCopier ec(ac, dbg->toJSObject());
@@ -5382,8 +5379,6 @@ DebuggerObject_defineProperties(JSContext *cx, unsigned argc, Value *vp)
         ac.construct(cx, obj);
         for (size_t i = 0; i < n; i++) {
             if (!cx->compartment()->wrap(cx, descs[i]))
-                return false;
-            if (descs[i].descriptorValue().isUndefined() && !descs[i].makeObject(cx))
                 return false;
         }
 
